realización de ejercicios excepto el 9

--- a/html10.html
+++ b/html10.html
@@ -9,28 +9,46 @@ table, tr, th, td {
 </style>
 </head>
 <body>
-Categoría	Etiquetas
 
-Formulario
-form
-button
-input
-select
-textarea
+  <table>
+    <tr>
+      <th>Categoría</th>
+      <th>Etiquetas</th>
+    </tr>
+    
+    <tr>
+      <th>Formulario</th>
+    </tr>
+    <tr>
+      <td>form</td>
+      <td>button</td>
+      <td></td>
+      <td></td>
+    </tr>
+    
+  
+  
+  
+  input
+  select
+  textarea
+  </tr>
 
-Tabla
-table
-tr
-th
-td
-caption
+  Tabla
+  table
+  tr
+  th
+  td
+  caption
 
-Texto
-b
-em
-i
-strong
-sub
-sup
+  Texto
+  b
+  em
+  i
+  strong
+  sub
+  sup
+  </table>
+
 </body>
 </html>
