--- a/html4.html
+++ b/html4.html
@@ -1,6 +1,11 @@
-<html>
+</html>
+<!DOCTYPE html>
+<html lang="es">
 <head>
-<title>World Wide Web</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>World Wide Web</title>
 </head>
 <body>
 
@@ -10,7 +15,7 @@
 En inform&aacute;tica, la <strong><em>World Wide Web</em></strong> (WWW) o Red inform&aacute;tica mundial com&uacute;nmente conocida como la web, es un sistema de distribuci&oacute;n de documentos de hipertexto o hipermedios interconectados y accesibles v&iacute;a Internet. Con un navegador web, un usuario visualiza sitios web compuestos de p&aacute;ginas web que pueden contener texto, im&aacute;genes, v&iacute;deos u otros contenidos multimedia, y navega a trav&eacute;s de esas p&aacute;ginas usando hiperenlaces.
 </p>
 
-<h3>Historia</h3>
+<h2>Historia</h2>
 
 <p>
 La web se desarrolló entre marzo de 1989 y diciembre de 1990 por el inglés Tim Berners-Lee con la ayuda del belga Robert Cailliau mientras trabajaban en el CERN en Ginebra, Suiza, y publicado en 1992.
@@ -30,6 +35,6 @@ There is only one web.
 </p>
 </blockquote>
 
-<p>Fuente: <em>Wikipedia</em></p>
+<p>Fuente: <cite>Wikipedia</cite></p>
 
 </html>
