--- a/html1.html
+++ b/html1.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>El tÃ­tulo de la pÃ¡gina</title>
+<title>El título de la página</title>
 </head>
 <body>
 
-<p>HTML son las siglas de <em>HyperText Markup Language</em>, que puede traducirse como lenguaje de marcas o marcado de hipertexto.
+<H1>HTML</H1>
+<p><b>HTML</b> son las siglas de <em>HyperText Markup Language</em>, que puede traducirse como lenguaje de marcas o marcado de hipertexto.
 </p>
 
-<p>El lenguaje HTML se emplea para crear las pÃ¡ginas web. Es muy fÃ¡cil ver el cÃ³digo HTML de una pÃ¡gina web, la opciÃ³n exacta cambia de un navegador a otro y tambiÃ©n puede cambiar de una versiÃ³n a otra de un mismo navegador, pero suelen tener un nombre similar.
+<p>El lenguaje <b>HTML</b> se emplea para crear las páginas web. Es muy fácil ver el código <b>HTML</b> de una página web, la opción exacta cambia de un navegador a otro y también puede cambiar de una versión a otra de un mismo navegador, pero suelen tener un nombre similar.
 </p>
 
-<p>HTML se compone de etiquetas que se escriben entre los sÃ­mbolos menor que y mayor que.</p>
+<p><b>HTML</b> se compone de etiquetas que se escriben entre los símbolos menor que y mayor que.</p>
 
-<p>Los inicios del lenguaje HTML se remontan al aÃ±o 1990, cuando Tim Berners-Lee creÃ³ la primera pÃ¡gina web.</p>
+<H2>Historia de HTML</H2>
+
+<p>Los inicios del lenguaje HTML se remontan al año 1990, cuando Tim Berners-Lee creó la primera página web.</p>
+
+<H2>Versiones de HTML</H2>
+
+<p><em>Tim Berners-Lee</em> definió la primera versión de <b>HTML</b> en el año 1991</p>
+
+<p>En la actualidad, la última versión de <b>HTML</b> es HTML5.</p>
 
 </body>
 </html>
