--- a/html4.html
+++ b/html4.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang=es>
 <head>
 <title>World Wide Web</title>
 </head>
@@ -24,11 +25,7 @@ Desde entonces, Berners-Lee ha jugado un papel activo guiando el desarrollo de e
 Una frase famosa de Tim Berners-Lee es:
 </p>
 
-<blockquote>
-<p>
-There is only one web.
-</p>
-</blockquote>
+<blockquote><p><em>There is only one web.</em></p></blockquote>
 
 <p>Fuente: <em>Wikipedia</em></p>
 
