--- a/html3.html
+++ b/html3.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang=es>
 <head>
 <title>World Wide Web</title>
@@ -7,7 +8,8 @@
 <h1>World Wide Web</h1>
 
 <p>
-En informática, la <strong><em>World Wide Web</strong></em> (WWW) o Red informática mundial comúnmente conocida como la web, es un sistema de distribución de documentos de hipertexto o hipermedios interconectados y accesibles vía Internet. Con un navegador web, un usuario visualiza sitios web compuestos de páginas web que pueden contener texto, imágenes, vídeos u otros contenidos multimedia, y navega a través de esas páginas usando hiperenlaces.
+En informática, la <strong><em>World Wide Web</em></strong> (WWW) o Red informática mundial comúnmente conocida como la web, es un sistema de distribución de documentos de hipertexto o hipermedios interconectados y accesibles vía Internet. Con un navegador web, un usuario visualiza sitios web compuestos de páginas web que pueden contener texto, imágenes, vídeos u otros contenidos multimedia, y navega a través de esas páginas usando hiperenlaces.
+</p>
 
 <h2>Historia</h2>
 
@@ -19,6 +21,6 @@ La web se desarrolló entre marzo de 1989 y diciembre de 1990 por el inglés Tim
 Desde entonces, Berners-Lee ha jugado un papel activo guiando el desarrollo de estándares web (como los lenguajes de marcado con los que se crean las páginas web), y en los últimos años ha abogado por su visión de una web semántica.
 </p>
 
-<p>Fuente: <em>Wikipedia</p></em>
-
+<p>Fuente: <em>Wikipedia</em></p>
+</body>
 </html>
