--- a/html1.html
+++ b/html1.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
 <title>El título de la página</title>
 </head>
 <body>
-
-<p>HTML son las siglas de <em>HyperText Markup Language</em>, que puede traducirse como lenguaje de marcas o marcado de hipertexto.
+<h1>HTML</h1>
+<p><strong>HTML</strong> son las siglas de <em>HyperText Markup Language</em>, que puede traducirse como lenguaje de marcas o marcado de hipertexto.
 </p>
 
-<p>El lenguaje HTML se emplea para crear las páginas web. Es muy fácil ver el código HTML de una página web, la opción exacta cambia de un navegador a otro y también puede cambiar de una versión a otra de un mismo navegador, pero suelen tener un nombre similar.
+<p>El lenguaje <strong>HTML</strong> se emplea para crear las páginas web. Es muy fácil ver el código <strong>HTML</strong> de una página web, la opción exacta cambia de un navegador a otro y también puede cambiar de una versión a otra de un mismo navegador, pero suelen tener un nombre similar.
 </p>
 
-<p>HTML se compone de etiquetas que se escriben entre los símbolos menor que y mayor que.</p>
+<p><strong>HTML</strong> se compone de etiquetas que se escriben entre los símbolos menor que y mayor que.</p>
 
-<p>Los inicios del lenguaje HTML se remontan al año 1990, cuando Tim Berners-Lee creó la primera página web.</p>
+<h2>Historia de HTML</h2>
+<p>Los inicios del lenguaje <strong>HTML</strong> se remontan al año 1990, cuando <em>Tim Berners-Lee</em> creó la primera página web.</p>
 
+
+<h2>Versiones de HTML</h2> <p><em>Tim Berners-Lee</em> definió la primera versión de <strong>HTML</strong> en el año 1991</p><p>En la actualidad, la última versión de <strong>HTML</strong> es HTML5</p>
 </body>
 </html>
+
+<style>
+body{
+color: #3c3c3c;
+background-color: #fffff9;
+text-align: justify;
+}
+</style>
