--- a/html2.html
+++ b/html2.html
@@ -1,27 +1,39 @@
-Tim Berners-Lee
+<h1  class="titol">Tim Berners-Lee</h1>
 
 
-Sir Timothy "Tim" John Berners-Lee (Londres, Reino Unido, 8 de junio de 1955) es un cient√≠fico de la computaci√≥n brit√°nico, conocido por ser el padre de la Web. Estableci√≥ la primera comunicaci√≥n entre un cliente y un servidor usando el protocolo HTTP en noviembre de 1989. En octubre de 1994 fund√≥ el Consorcio de la World Wide Web (W3C) con sede en el MIT, para supervisar y estandarizar el desarrollo de las tecnolog√≠as sobre las que se fundamenta la Web y que permiten el funcionamiento de Internet.
+<p>Sir Timothy "Tim" John Berners-Lee (Londres, Reino Unido, 8 de junio de 1955) es un cientÌfico de la computaciÛn brit·nico, conocido por ser el padre de la Web. EstableciÛ la primera comunicaciÛn entre un cliente y un servidor usando el protocolo <strong>HTTP</strong> en noviembre de 1989. En octubre de 1994 fundÛ el <em>Consorcio de la World Wide Web</em> (<strong>W3C</strong>) con sede en el <strong>MIT</strong>, para supervisar y estandarizar el desarrollo de las tecnologÌas sobre las que se fundamenta la Web y que permiten el funcionamiento de Internet.</p>
+
+<h2>BiografÌa</h2>
 
 
-Biograf√≠a
+<p>NaciÛ en el sudoeste de Londres en 1955. Sus padres eran matem·ticos y formaron parte del equipo que construyÛ el Manchester Mark I (una de las primeras computadoras). Durante el tiempo que estuvo en la universidad, construyÛ una computadora con una soldadora, circuitos <strong>TTL</strong>, un procesador Motorola 68000 y un televisor viejo. Se graduÛ en fÌsica en 1976 en el <em>Queen's College de la Universidad de Oxford</em>. ConociÛ a su primera esposa en este periodo. En 1978, trabajÛ en <em>D.G. Nash Limited</em> (tambiÈn en <em>Poole</em>) escribiÛ un sistema operativo.</p>
 
 
-Naci√≥ en el sudoeste de Londres en 1955. Sus padres eran matem√°ticos y formaron parte del equipo que construy√≥ el Manchester Mark I (una de las primeras computadoras). Durante el tiempo que estuvo en la universidad, construy√≥ una computadora con una soldadora, circuitos TTL, un procesador Motorola 68000 y un televisor viejo. Se gradu√≥ en f√≠sica en 1976 en el Queen's College de la Universidad de Oxford. Conoci√≥ a su primera esposa en este periodo. En 1978, trabaj√≥ en D.G. Nash Limited (tambi√©n en Poole) escribi√≥ un sistema operativo.
+<h2>Desarrollo de su carrera</h2>
 
 
-Desarrollo de su carrera
-
-
-Berners-Lee trabaj√≥ en el CERN desde junio hasta diciembre de 1980. Durante ese tiempo, propuso un proyecto basado en el hipertexto para facilitar la forma de compartir y la puesta al d√≠a de la informaci√≥n entre investigadores. En este periodo tambi√©n construy√≥ un programa llamado Enquire que no lleg√≥ a ver la luz.
-
-
-
-Despu√©s de dejar el CERN, en 1980, se fue a trabajar a la empresa de John Poole Image Computer Systems Ltd., pero regres√≥ al CERN otra vez en 1984.
+<p>Berners-Lee trabajÛ en el <strong>CERN</strong> desde junio hasta diciembre de 1980. Durante ese tiempo, propuso un proyecto basado en el hipertexto para facilitar la forma de compartir y la puesta al dÌa de la informaciÛn entre investigadores. En este periodo tambiÈn construyÛ un programa llamado Enquire que no llegÛ a ver la luz.</p>
 
 
 
-En 1989, el CERN era el nodo de Internet m√°s grande de Europa y Berners-Lee vio la oportunidad de unir Internet y el hipertexto (HTTP y HTML), de lo que surgir√≠a la World Wide Web. Desarroll√≥ su primera propuesta de la Web en marzo de 1989, pero no tuvo mucho eco, por lo que en 1990 y con la ayuda de Robert Cailliau, hicieron una revisi√≥n que fue aceptada por su gerente, Mike Sendall. Us√≥ ideas similares a las que hab√≠a usado en el sistema Enquire para crear la World Wide Web, para esto dise√±√≥ y construy√≥ el primer navegador (llamado WorldWideWeb y desarrollado con NextStep) y el primer servidor web al que llam√≥ httpd (HyperText Transfer Protocol daemon).
+<p>DespuÈs de dejar el <strong>CERN</strong>, en 1980, se fue a trabajar a la empresa de <em>John Poole Image Computer Systems Ltd.</em>, pero regresÛ al <strong>CERN</strong> otra vez en 1984.</p>
 
 
-Fuente: Wikipedia
+
+<p>En 1989, el <strong>CERN</strong> era el nodo de Internet m·s grande de Europa y Berners-Lee vio la oportunidad de unir Internet y el hipertexto (<strong>HTTP</strong> y <strong>HTML</strong>), de lo que surgirÌa la World Wide Web. DesarrollÛ su primera propuesta de la Web en marzo de 1989, pero no tuvo mucho eco, por lo que en 1990 y con la ayuda de Robert Cailliau, hicieron una revisiÛn que fue aceptada por su gerente, Mike Sendall. UsÛ ideas similares a las que habÌa usado en el sistema Enquire para crear la World Wide Web, para esto diseÒÛ y construyÛ el primer navegador (llamado WorldWideWeb y desarrollado con NextStep) y el primer servidor web al que llamÛ httpd (HyperText Transfer Protocol daemon).</p>
+
+
+<p>Fuente: <em>Wikipedia</em></p>
+
+<div class="font-code">https://github.com/bcncodes-training/basics-HTML</div>
+
+<style>
+body{
+color: #3c3c3c;
+background-color: #fffff9;
+text-align: justify;
+}
+.font-code{display:none;}
+</style>
+
+
